# branchrt

./: CMakeLists.txt  README.md  Readme.md  hook_infoAND.cpp  hook_info_objects.cpp  rw_addr.cpp
inc/hookRuntime/: LogicalObject.h  ObjectNativeInfo.h
inc/hookrt/: info.h  object.h
include/blrta64/: logical_object.h  object_native_info.h
include/bra64rt/: object_native_info.h
include/branchrt/: object_native_info.h  runtime_object.h
